finpudsning og ændring af fr billeder og overskrifter

--- a/aboutme.html
+++ b/aboutme.html
@@ -49,96 +49,96 @@
       </section>
 
       <section class="bon hvid lys andenlys box01">
-        <h1>Hvem er den pige?</h1>
+        <h1>Hvem står bag projekterne?</h1>
         <div class="grid_2-1">
           <div class="forsidefoto">
             <img src="img/miggalleri.png" alt="" />
           </div>
           <div>
-            <h3>Hvad kan du finde på min portfolio</h3>
+            <h3>Det her er mig</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-              earum autem, fuga praesentium reprehenderit dolore nobis vitae
-              nesciunt molestiae impedit ex ad voluptates error eveniet
-              mollitia, ab excepturi debitis incidunt. Lorem ipsum dolor sit
-              amet, consectetur adipisicing elit. Saepe quam facilis velit
-              placeat exercitationem iure eaque. Voluptates consequuntur atque
-              earum doloremque minus natus, hic dolores magni, optio facere
-              possimus est!
+              Jeg er multimediedesignstuderende med en passion for at skabe
+              digitale løsninger fra bunden. Det kreative arbejde og processen
+              fra idé til færdigt produkt motiverer mig, og jeg trives med at
+              kombinere design og struktur i mine projekter.
             </p>
+            <p>
+              Jeg har et godt øje for detaljer og går op i, at løsninger ikke
+              kun ser godt ud, men også fungerer godt for brugeren. Særligt
+              brugervenlighed og kodning interesserer mig, fordi de giver
+              mulighed for at skabe digitale oplevelser, der er intuitive og
+              gennemarbejdede. Mit mål er løbende at udvikle mine færdigheder og
+              bruge dem til at skabe løsninger, hvor kreativitet, funktionalitet
+              og brugerens behov hænger sammen.
+            </p>
+            <!-- <div class="grid_2-1">
+              <div class="box02"><img src="img/ommigkam.gif" alt="" /></div>
+            </div> -->
           </div>
-        </div>
-        <div class="grid_2-1">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi earum
-            autem, fuga praesentium reprehenderit dolore nobis vitae nesciunt
-            molestiae impedit ex ad voluptates error eveniet mollitia, ab
-            excepturi debitis incidunt.
-          </p>
-          <div class="box02"><img src="img/ommigkam.gif" alt="" /></div>
         </div>
       </section>
 
       <section class="hvid-baggrund">
         <div><img src="" alt="" /></div>
-        <h1>Det Handler "Om Mig"</h1>
+        <h1>Min rolle og mine Kompetencer</h1>
         <div class="grid_2-1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            voluptas velit at quae pariatur maiores rem quod, iure inventore
-            debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-            nam, quod earum facere, error quibusdam ipsa aperiam repellendus
-            quam perferendis at quas voluptas minima quis animi dignissimos
-            excepturi tenetur reiciendis! Sequi reprehenderit repellat iure
-            molestias impedit eligendi beatae voluptate veniam, natus inventore
-            eius voluptatibus sapiente cum, illo hic reiciendis aliquam
-            perspiciatis ratione itaque necessitatibus earum quas non ad
-            tenetur? Hic.
-          </p>
-          <div class="box03"><img src="img/polaroid01.jpg" alt="" /></div>
+          <div>
+            <h3>Om mig som studerende</h3>
+
+            <p>
+              Jeg studerer i øjeblikket multimediedesign og har tidligere
+              arbejdet med sociale medier, medieproduktion og forskellige former
+              for content. Her har jeg fået erfaring med at tænke kreativt og
+              målrettet i forhold til formidling og visuel kommunikation. På
+              uddannelsen har jeg blandt andet arbejdet med et projekt, hvor jeg
+              havde frit valg af emne. Her brugte jeg muligheden for at udfolde
+              min kreativitet og inddrage dele af min kulturelle baggrund i
+              løsningen. Det var en inspirerende proces, som gav mig et tydeligt
+              indblik i, hvor mange forskellige måder man kan skabe og formidle
+              på. Projektet har styrket min forståelse for kreativ frihed og
+              vist mig, hvordan personlige perspektiver kan være en styrke i
+              digitale og visuelle løsninger.
+            </p>
+          </div>
+          <div class="box03"><img src="img/polaroid02.jpg" alt="" /></div>
         </div>
+        <!-- <div class="grid_2-1">
+          <h3>Det Handler "Om Mig"</h3>
+          <div class="grid_2-1">
+            <p>
+              Jeg studerer i øjeblikket multimediedesign og har tidligere
+              arbejdet med sociale medier, medieproduktion og forskellige former
+              for content. Her har jeg fået erfaring med at tænke kreativt og
+              målrettet i forhold til formidling og visuel kommunikation. På
+              uddannelsen har jeg blandt andet arbejdet med et projekt, hvor jeg
+              havde frit valg af emne. Her brugte jeg muligheden for at udfolde
+              min kreativitet og inddrage dele af min kulturelle baggrund i
+              løsningen. Det var en inspirerende proces, som gav mig et tydeligt
+              indblik i, hvor mange forskellige måder man kan skabe og formidle
+              på. Projektet har styrket min forståelse for kreativ frihed og
+              vist mig, hvordan personlige perspektiver kan være en styrke i
+              digitale og visuelle løsninger.
+            </p>
+            <h3>Min erhvervserfaring</h3>
+            <p>
+              Jeg har erfaring fra forskellige jobs, hvor ansvar, struktur og
+              samarbejde har været centrale elementer. Som en del af et
+              medieteam i Ungdomsklub arbejdede jeg med at indsamle information,
+              fotografere og formidle indhold til både unge og deres forældre.
+              Det gav mig praktisk erfaring med mediearbejde og tekniske opgaver
+              samt forståelse for målrettet kommunikation. Derudover har jeg
+              arbejdet som leder på en ungdomslejr, hvor jeg opnåede erfaring
+              med at bevare overblik og kommunikere tydeligt også i pressede
+              situationer. Rollen krævede tæt samarbejde og ansvar for andre,
+              hvilket har styrket mine evner inden for teamwork og ledelse.
+            </p>
+            <div class="box03"><img src="img/polaroid01.jpg" alt="" /></div>
+          </div>
+        </div> -->
       </section>
 
       <section class="bon hvid lys andenlys">
         <h1 class="hvid">Mine Projekter</h1>
-
-        <div class="card-container">
-          <div class="card">
-            <span class="card-number">01</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 1" />
-            <div class="card-description">
-              Min første webside med HTML og CSS
-            </div>
-          </div>
-          <div class="card">
-            <span class="card-number">02</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 2" />
-            <div class="card-description">JavaScript calculator app</div>
-          </div>
-          <div class="card">
-            <span class="card-number">03</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 3" />
-            <div class="card-description">Responsivt design til mobil</div>
-          </div>
-          <div class="card">
-            <span class="card-number">04</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 4" />
-            <div class="card-description">
-              Portfolio website med animationer
-            </div>
-          </div>
-          <div class="card">
-            <span class="card-number">05</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 5" />
-            <div class="card-description">
-              E-commerce side med shopping cart
-            </div>
-          </div>
-        </div>
-
-        <button id="nextButton">Se Næste Projekt</button>
-        <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
     </main>
     <footer>
