--- a/index.html
+++ b/index.html
@@ -60,16 +60,52 @@
             </p>
           </div>
         </div>
-      </section>
 
-      <section>
-        <div class="box02"><img src="img/digi_street.gif" alt="" /></div>
-        <h1>Det Handler "Om Mig"</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          voluptas velit at quae pariatur maiores rem quod, iure inventore
-          debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
-        </p>
+        <section class="grid_2-1">
+          <div>
+            <h1 class="hvid">Min Proces</h1>
+            <p>
+              På mit første semester har jeg fået indsigt i hele processen bag
+              digitale løsninger fra research og forståelse af brugerbehov til
+              design, kodning og test. Jeg har arbejdet med wireframes,
+              prototyper og visuelle styles med fokus på brugervenlighed.
+              Derudover har jeg opnået grundlæggende erfaring med HTML, CSS og
+              JavaScript samt lært at optimere løsninger gennem test og
+              feedback. Semesteret har også styrket min forståelse for
+              indholdsproduktion (foto og video) og dokumentation af mine
+              arbejdsprocesser.
+            </p>
+          </div>
+          <div>
+            <a href="" class="tilbage-link"
+              >[01 Research] - Finder information og bearbejder brugerbehov. </a
+            ><a href="" class="tilbage-link"
+              >[02 Opbygning] - wireframes og layout, nemmere at placere
+              indhold.</a
+            >
+            <a href="" class="tilbage-link"
+              >[03 Design] - prototyper og stile/looks med fokus på
+              brugervenlighed</a
+            >
+            <a href="" class="tilbage-link">[04 Kodning] - HTML/CSS/JS </a>
+            <a href="" class="tilbage-link"
+              >[05 Test] - Tester & forbedring, så sitet er mere optimalt.</a
+            >
+          </div>
+        </section>
+      </section>
+      <section class="grid_2-1">
+        <section class="centermig">
+          <div class="box02"><img src="img/digi_street.gif" alt="" /></div>
+        </section>
+        <div>
+          <h1>Det Handler "Om Mig"</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+            voluptas velit at quae pariatur maiores rem quod, iure inventore
+            debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
+          </p>
+        </div>
       </section>
 
       <section class="bon hvid lys andenlys">
