--- a/projekt.html
+++ b/projekt.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="css_projekter/general.css" />
     <link rel="stylesheet" href="css_projekter/layout.css" />
     <link rel="stylesheet" href="css_projekter/galleri.css" />
-    <!-- <link rel="stylesheet" href="css_aboutme/custom.css" /> -->
+
     <!-- <link rel="stylesheet" href="css_aboutme/fonts.css" /> -->
-    <!-- <link rel="stylesheet" href="css_aboutme/cards.css" /> -->
   </head>
 
   <body id="top">
@@ -29,7 +28,7 @@
       <nav>
         <ul class="menu knapper">
           <li><a href="index.html">Forside</a></li>
-          <li><a href="projekt.html">Projekter</a></li>
+          <li><a href="aboutme.html">Om Mig</a></li>
           <li><a href="index.html">Kontakt Mig</a></li>
         </ul>
         <button class="burger">
@@ -53,6 +52,13 @@
 
       <section class="projekt-section">
         <h1>Mine Projekter</h1>
+        <p>
+          Her er en oversigt over de forskellige temaer jeg har været igennem på
+          denne uddannelse, hvor jeg har lært noget forskelligt i forhold til
+          design, layout og programmering af hjemmesider, samt andre ting på 1.
+          Semester:
+        </p>
+        <p>Så tryk på en af billederne og få et indblik i hvad jeg har lært</p>
 
         <div class="projekt-grid">
           <!-- intro -->
@@ -181,7 +187,7 @@
       <section id="introuge-section" class="projekt-detail bon">
         <div class="container">
           <h1>INTROUGE</h1>
-          <h3>Tema 1 - Første Link, Første Video, Første Kort</h3>
+          <h2>Tema 1 - Introduktion</h2>
 
           <div class="grid_2-1">
             <div class="forsidefoto">
@@ -189,52 +195,89 @@
               <div class="forsidefoto">
                 <img src="img/introuge04.png" alt="Introuge projekt" />
               </div>
+              <div class="forsidefoto">
+                <img src="img/github.png" alt="Introuge projekt" />
+              </div>
             </div>
             <div>
+              <h3>Projektbeskrivelse</h3>
               <p>
-                I dette projekt lærte jeg grundlæggende om webdesign og digital
-                formidling. Jeg arbejdede med at skabe links, videoindhold og
-                visuelle kort som introducerede mig til multimediets muligheder.
-              </p>
-              <p>
-                Projektet var mit første møde med det kreative digitale univers,
-                hvor jeg eksperimenterede med forskellige formidlingsformer og
-                lærte at kombinere tekst, billeder og video.
+                Dette projekt var mit første skridt ind i webdesign og digital
+                formidling. Her arbejdede jeg med at opbygge en simpel webside
+                og eksperimenterede med links, video og visuelle elementer.
+                Projektet gav mig en grundlæggende forståelse for, hvordan man
+                kan formidle indhold digitalt ved at kombinere forskellige
+                medier.
               </p>
 
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <h3>Proces</h3>
+              <p>
+                Jeg blev introduceret til GitHub og grundlæggende
+                versionsstyring. Undervejs arbejdede jeg med commits, struktur
+                og forståelsen af, hvordan et projekt dokumenteres og afleveres
+                korrekt. Det gav mig indsigt i et simpelt, men effektivt
+                arbejdsflow. Projektet har lært mig at: oprette og vedligeholde
+                et offentligt GitHub-repository bruge versionsstyring på et
+                grundlæggende niveau deploye en webside via GitHub Pages arbejde
+                med digital formidling gennem tekst, billeder og video
+              </p>
+              <h3>Læring</h3>
+              <p>
+                Projektet har lært mig at: oprette og vedligeholde et offentligt
+                GitHub-repository bruge versionsstyring på et grundlæggende
+                niveau deploye en webside via GitHub Pages arbejde med digital
+                formidling gennem tekst, billeder og video
+              </p>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
-                >Se Projektet</a
+                >Se Titelvideo</a
+              ><a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+                >Se min Github side</a
               >
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
           </div>
         </div>
       </section>
 
       <!-- mobil og web sektion -->
-      <section id="mobilsite-section" class="projekt-detail hvid-baggrund">
+      <section
+        id="mobilsite-section"
+        class="projekt-detail hvid-baggrund whitebox minibox"
+      >
         <div class="container">
           <h1>Mobilsite og Website</h1>
-          <h3 class="whitebox">Tema 2 - Første hele kodet Hjemmeside</h3>
+          <h2>Tema 2 - Grundlæggende Web</h2>
 
           <div class="grid_2-1">
             <div>
+              <h3>Projektbeskrivelse</h3>
               <p>
                 Dette var min første fuldstændigt kodet hjemmeside fra bunden.
                 Jeg arbejdede med HTML, CSS og responsivt design for at sikre,
-                at sitet fungerede godt på både mobil og desktop.
+                at sitet fungerede godt på både mobil og desktop.Så at det kunne
+                accepteres til studiestartsprøven.
               </p>
+              <h3>Proces & Læring</h3>
               <p>
                 Gennem dette projekt lærte jeg om semantisk HTML, CSS-layouts og
                 vigtigheden af brugeroplevelse på tværs af forskellige enheder.
+              </p>
+              <h3>Github</h3>
+              <p>
+                I forbindelse med projektet oprettede jeg min første
+                GitHub-konto i introduktionsugen og byggede et repository med en
+                overskuelig mappestruktur. Mit fokus var at holde projektet
+                ryddeligt og nemt at forstå. Jeg gjorde repositoryet offentligt
+                og koblede det til GitHub Pages, så løsningen kunne vises som en
+                live hjemmeside direkte i browseren.
               </p>
 
               <div class="forsidefoto">
                 <img src="img/førsteweb04.png" alt="Introuge projekt" />
               </div>
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
-              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
-                >Se Projektet</a
+              <a href="https://justy488.github.io/website/" class="tilbage-link"
+                >Se mit første web</a
               >
             </div>
             <div class="forsidefoto">
@@ -248,28 +291,39 @@
       <section id="emnesite-section" class="projekt-detail bon">
         <div class="container">
           <h1>Emnesite</h1>
-          <h3>Tema 3 - Mit eget website valgfrit emne</h3>
+          <h2>Tema 3 - Grundlæggende UX/UI</h2>
 
           <div class="grid_2-1">
             <div class="forsidefoto">
               <img src="img/emnesite01.png" alt="Emnesite projekt" />
             </div>
+
             <div>
+              <h3>Projektbeskrivelse</h3>
               <p>
                 I dette projekt fik jeg frihed til at vælge et emne, der
                 interesserede mig, og bygge et website omkring det. Dette gav
                 mig mulighed for at kombinere min passion med mine tekniske
-                færdigheder.
+                færdigheder. Det gav mig en indsigt i brugerforståelse,
+                prototyper
               </p>
+              <h3>Proces & Læring</h3>
               <p>
                 Jeg fokuserede på at skabe en sammenhængende brugeroplevelse med
                 gennemtænkt informationsarkitektur og visuelt design, der
-                understøttede emnets budskab.
+                understøttede emnets budskab. Der var stor læring i UI/UX
+                elementerne, som at skabe noget visuelt og at prøve at skabe det
+                igennem programmering og gøre det tilgængelig for andre.
               </p>
               <div class="forsidefoto">
                 <img src="img/emnesite02.png" alt="Emnesite projekt" />
               </div>
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <a
+                href=" https://justy488.github.io/emnesite/"
+                class="tilbage-link"
+                >Se mit Emnesite</a
+              >
             </div>
           </div>
         </div>
@@ -278,19 +332,23 @@
       <!-- emergency sektion -->
       <section
         id="emergency-section"
-        class="projekt-detail hvid-baggrund whitebox"
+        class="projekt-detail hvid-baggrund whitebox minibox"
       >
         <div class="container">
           <h1>Emergencysite</h1>
-          <h3>Tema 4 - En Nødsituation En unik løsning</h3>
+          <h2>Tema 4 - Grundlæggende Brugergrænseflade udvikling</h2>
 
           <div class="grid_2-1">
             <div>
+              <h3>Projektbeskrivelse</h3>
               <p>
                 Dette projekt udfordrede mig til at designe en løsning til en
                 nødsituation. Jeg arbejdede med brugercentreret design og skulle
                 sikre, at informationen var klar, tilgængelig og handlekraftig.
+                Jeg blev introduceret Adobe Illustrator (pentool, Vektorgrafik &
+                svg) og Javascript, som var store komponenter i opgaven.
               </p>
+              <h3>Proces & Læring</h3>
               <p>
                 Fokus var på at skabe et intuitivt interface, der kunne hjælpe
                 brugere i pressede situationer med at finde den information, de
@@ -300,6 +358,11 @@
                 <img src="img/emergency02.png" alt="Emergency projekt" />
               </div>
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <a
+                href="https://justy488.github.io/parallelunivers-main/"
+                class="tilbage-link"
+                >Se Projektet</a
+              >
             </div>
 
             <div class="forsidefoto">
@@ -313,27 +376,40 @@
       <section id="toemner-section" class="projekt-detail bon">
         <div class="container">
           <h1>Sandkassesite og Virksomhedssite</h1>
-          <h3>Tema 5 - Redesign & Fokus på Indhold</h3>
+          <h2>Tema 5 - Grundlæggende Indhold</h2>
 
           <div class="grid_2-1">
             <div class="forsidefoto">
               <img src="img/sandogvirksom01.png" alt="To emner projekt" />
             </div>
             <div>
+              <h3>Redesign & Fokus på Indhold</h3>
               <p>
                 I dette tema arbejdede jeg med to forskellige projekter: et
                 eksperimentelt sandkassesite og et professionelt
                 virksomhedssite. Begge med fokus på redesign og
-                indholdsstrategi.
+                indholdsstrategi.(1-sandkassesite)(2-virksomhedssite)
               </p>
+
               <p>
                 Jeg lærte om vigtigheden af at tilpasse design og indhold til
                 forskellige målgrupper og formål, samt hvordan man balancerer
-                kreativitet med professionelle standarder.
+                kreativitet med professionelle standarder. Jeg lærte hvor meget
+                arbejde der ligger i research af virksomheden både før og under
+                projektet. Jeg fik mulighed for at arbejde meget mere med Adobe
+                tools, som firefly, After effects, Adobe express, Lightroom og
+                andet.
               </p>
               <div class="forsidefoto">
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
               </div>
+
+              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+                >Se 1 Projekt</a
+              >
+              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+                >Se 2 Projekt</a
+              >
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
           </div>
@@ -343,32 +419,24 @@
       <!-- til min portfolio -->
       <section
         id="portfolio-section"
-        class="projekt-detail hvid-baggrund whitebox"
+        class="projekt-detail hvid-baggrund whitebox minibox"
       >
         <div class="container">
-          <h1>Portfolio</h1>
-          <h3>Tema 6 - Kommer Snart...</h3>
+          <h1>Portfolio-eksamen</h1>
+          <h2>Tema 6 - Kommer Snart...</h2>
 
           <div>
             <p>
               Dette projekt er under udvikling. Her vil jeg samle alle mine
               projekter i en sammenhængende portfolio, der viser min udvikling
-              som webudvikler og designer.
-            </p>
-            <p>
-              Portfolioen vil indeholde refleksioner over mine læreprocesser,
-              tekniske færdigheder og kreative tilgang til problemløsning.
+              som webudvikler og designer. Portfolioen vil indeholde
+              refleksioner over mine læreprocesser, tekniske færdigheder og
+              kreative tilgang til problemløsning.
+
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </p>
           </div>
         </div>
-      </section>
-
-      <section class="bon hvid lys andenlys">
-        <h1 class="hvid">Mine Projekter</h1>
-
-        <button id="nextButton">Se Næste Projekt</button>
-        <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
     </main>
     <footer>
