finpudsning af skrift og links

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,8 @@
     <title>Om Mig</title>
     <link rel="stylesheet" href="css_aboutme/style.css" />
     <link rel="stylesheet" href="css_aboutme/general.css" />
-    <!-- <link rel="stylesheet" href="css_aboutme/custom.css" /> -->
-    <!-- <link rel="stylesheet" href="css_aboutme/fonts.css" /> -->
-    <!-- <link rel="stylesheet" href="css_aboutme/cards.css" /> -->
+    <link rel="stylesheet" href="css_aboutme/custom.css" />
+    <link rel="stylesheet" href="css_aboutme/fonts.css" />
   </head>
 
   <body>
@@ -89,15 +88,17 @@
               Jeg studerer i øjeblikket multimediedesign og har tidligere
               arbejdet med sociale medier, medieproduktion og forskellige former
               for content. Her har jeg fået erfaring med at tænke kreativt og
-              målrettet i forhold til formidling og visuel kommunikation. På
-              uddannelsen har jeg blandt andet arbejdet med et projekt, hvor jeg
-              havde frit valg af emne. Her brugte jeg muligheden for at udfolde
-              min kreativitet og inddrage dele af min kulturelle baggrund i
-              løsningen. Det var en inspirerende proces, som gav mig et tydeligt
-              indblik i, hvor mange forskellige måder man kan skabe og formidle
-              på. Projektet har styrket min forståelse for kreativ frihed og
-              vist mig, hvordan personlige perspektiver kan være en styrke i
-              digitale og visuelle løsninger.
+              målrettet i forhold til formidling og visuel kommunikation.
+            </p>
+            <p>
+              På uddannelsen har jeg blandt andet arbejdet med et projekt, hvor
+              jeg havde frit valg af emne. Her brugte jeg muligheden for at
+              udfolde min kreativitet og inddrage dele af min kulturelle
+              baggrund i løsningen. Det var en inspirerende proces, som gav mig
+              et tydeligt indblik i, hvor mange forskellige måder man kan skabe
+              og formidle på. Projektet har styrket min forståelse for kreativ
+              frihed og vist mig, hvordan personlige perspektiver kan være en
+              styrke i digitale og visuelle løsninger.
             </p>
           </div>
           <div class="box03"><img src="img/polaroid02.jpg" alt="" /></div>
