--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             >
             <a href="" class="tilbage-link">[04 Kodning] - HTML/CSS/JS </a>
             <a href="" class="tilbage-link"
-              >[05 Test] - Tester & forbedring, så sitet er mere optimalt.</a
+              >[05 Test] - Tester & forbedre, så sitet er mere optimalt.</a
             >
           </div>
         </section>
