--- a/projekt.html
+++ b/projekt.html
@@ -51,15 +51,18 @@
       </section>
 
       <section class="projekt-section">
-        <h1>Mine Projekter</h1>
-        <p>
-          Her er en oversigt over de forskellige temaer jeg har været igennem på
-          denne uddannelse, hvor jeg har lært noget forskelligt i forhold til
-          design, layout og programmering af hjemmesider, samt andre ting på 1.
-          Semester:
-        </p>
-        <p>Så tryk på en af billederne og få et indblik i hvad jeg har lært</p>
-
+        <section class="beskrivelse">
+          <h1>Mine Projekter</h1>
+          <p>
+            Her er en oversigt over de forskellige temaer jeg har været igennem
+            på denne uddannelse, hvor jeg har lært noget forskelligt i forhold
+            til design, layout og programmering af hjemmesider, samt andre ting
+            på 1. Semester:
+          </p>
+          <p>
+            Så tryk på en af billederne og få et indblik i hvad jeg har lært
+          </p>
+        </section>
         <div class="projekt-grid">
           <!-- intro -->
           <a href="#introuge-section" class="projekt-item">
@@ -202,9 +205,8 @@
             <div>
               <h3>Projektbeskrivelse</h3>
               <p>
-                Dette projekt var mit første skridt ind i webdesign og digital
-                formidling. Her arbejdede jeg med at opbygge en simpel webside
-                og eksperimenterede med links, video og visuelle elementer.
+                Dette projekt var mit første skridt ind i digital formidling.
+                eksperimenterede med links, video og visuelle elementer.
                 Projektet gav mig en grundlæggende forståelse for, hvordan man
                 kan formidle indhold digitalt ved at kombinere forskellige
                 medier.
@@ -212,14 +214,11 @@
 
               <h3>Proces</h3>
               <p>
-                Jeg blev introduceret til GitHub og grundlæggende
-                versionsstyring. Undervejs arbejdede jeg med commits, struktur
-                og forståelsen af, hvordan et projekt dokumenteres og afleveres
-                korrekt. Det gav mig indsigt i et simpelt, men effektivt
-                arbejdsflow. Projektet har lært mig at: oprette og vedligeholde
-                et offentligt GitHub-repository bruge versionsstyring på et
-                grundlæggende niveau deploye en webside via GitHub Pages arbejde
-                med digital formidling gennem tekst, billeder og video
+                Jeg blev introduceret til GitHub. Projektet har lært mig at:
+                oprette og vedligeholde et offentligt GitHub-repository bruge
+                versionsstyring på et grundlæggende niveau deploye en webside
+                via GitHub Pages arbejde med digital formidling gennem tekst,
+                billeder og video
               </p>
               <h3>Læring</h3>
               <p>
@@ -253,14 +252,18 @@
               <h3>Projektbeskrivelse</h3>
               <p>
                 Dette var min første fuldstændigt kodet hjemmeside fra bunden.
-                Jeg arbejdede med HTML, CSS og responsivt design for at sikre,
-                at sitet fungerede godt på både mobil og desktop.Så at det kunne
+                Her arbejdede jeg med at opbygge en simpel webside og arbejdede
+                med HTML, CSS og responsivt design for at sikre, at sitet
+                fungerede godt på både mobil og desktop.Så at det kunne
                 accepteres til studiestartsprøven.
               </p>
               <h3>Proces & Læring</h3>
               <p>
                 Gennem dette projekt lærte jeg om semantisk HTML, CSS-layouts og
                 vigtigheden af brugeroplevelse på tværs af forskellige enheder.
+                Undervejs arbejdede jeg med commits, struktur og forståelsen af,
+                hvordan et projekt dokumenteres og afleveres korrekt. Det gav
+                mig indsigt i et simpelt, men effektivt arbejdsflow.
               </p>
               <h3>Github</h3>
               <p>
@@ -278,6 +281,11 @@
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
               <a href="https://justy488.github.io/website/" class="tilbage-link"
                 >Se mit første web</a
+              >
+              <a
+                href="https://github.com/Justy488?tab=repositories"
+                class="tilbage-link"
+                >Se min Github repo</a
               >
             </div>
             <div class="forsidefoto">
@@ -404,10 +412,14 @@
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
               </div>
 
-              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+              <a
+                href=" https://justy488.github.io/tema5_sandkassesite/"
+                class="tilbage-link"
                 >Se 1 Projekt</a
               >
-              <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
+              <a
+                href="https://justy488.github.io/tema-5_part2/"
+                class="tilbage-link"
                 >Se 2 Projekt</a
               >
               <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
